Arrangement keeps its placements in declaration order
Map.copyOf hashes its entries, so the allocation's pane iteration order was
whatever the hash gave. Nothing was wrong on the wire — WorkspaceSpecJson walks
shapePanes(), which comes off the layout tree — but anything reading widgets()
directly got an arbitrary order, including the guard's duplicate-placement
message, which names the two panes involved.

Collections.unmodifiableMap over the LinkedHashMap that was already being built,
which is exactly what WidgetEntry.defaults does, and for the reason its comment
already records. Equality is unaffected: Map.equals ignores order either way.

172 shell tests green.